@@ -15,13 +15,15 @@
 
 from logging import getLogger
 
+from Acquisition import aq_base
+from App.special_dtml import DTMLFile
 from BTrees.OOBTree import difference
 from BTrees.OOBTree import OOSet
-from App.special_dtml import DTMLFile
 
 from Products.PluginIndexes.common import safe_callable
 from Products.PluginIndexes.common.UnIndex import UnIndex
 
+_marker = []
 LOG = getLogger('Zope.KeywordIndex')
 
 
@@ -90,15 +92,18 @@ class KeywordIndex(UnIndex):
         return 1
 
     def _get_object_keywords(self, obj, attr):
+        has_attr = getattr(aq_base(obj), attr, _marker)
+        if has_attr is _marker:
+            return ()
         newKeywords = getattr(obj, attr, ())
         if safe_callable(newKeywords):
             try:
                 newKeywords = newKeywords()
-            except AttributeError:
+            except (AttributeError, TypeError):
                 return ()
         if not newKeywords:
             return ()
-        elif isinstance(newKeywords, basestring): #Python 2.1 compat isinstance
+        elif isinstance(newKeywords, basestring):
             return (newKeywords,)
         else:
             unique = {}
